# xfeatcpp

./: CMakeLists.txt  README.md  build.sh  build_debug.sh  build_system_opencv.sh  build_with_local_opencv.sh  download_compatible_opencv.sh  download_opencv.sh  install_dependencies.sh  install_eigen.sh  setup_opencv_local.sh  upgrade_eigen.sh  upgrade_opencv.sh
include/: feat_extractor.h  lighterGlue.h  matcher.h  ort_run.h  xfeat.h
onnx/: export.py  lighterglue_1024_L3.onnx  lighterglue_2048_L3.onnx  lighterglue_512_L3.onnx  lighterglue_L3.onnx  xfeat_1024_2048x3072.onnx  xfeat_1024_600x800.onnx  xfeat_2048_2048x3072.onnx  xfeat_2048_600x800.onnx  xfeat_4096_1280x720.onnx  xfeat_4096_2048x3072.onnx  xfeat_4096_3072x2048.onnx  xfeat_512_600x800.onnx  xfeat_dense_1024_1024x1536.onnx  xfeat_dense_1024_800x1200.onnx  xfeat_dense_2048_1024x1536.onnx  xfeat_dense_2048_600x800.onnx  xfeat_dense_2048_800x1200.onnx
src/: feat_extractor.cpp  hybrid_realtime_matching.cpp  lighterGlue.cpp  main.cpp  matcher.cpp  ort_run.cpp  realtime_matching.cpp  xfeat.cpp
